feat: add visual effects (particles, 3D tilt, parallax, cursor glow, shimmer)

--- a/index.html
+++ b/index.html
@@ -1446,6 +1446,174 @@
                 padding: 1.5rem;
             }
         }
+
+        /* ============================================
+           VISUAL EFFECTS - SAND PARTICLES
+        ============================================ */
+        .particles-container {
+            position: absolute;
+            inset: 0;
+            overflow: hidden;
+            pointer-events: none;
+            z-index: 1;
+        }
+
+        .particle {
+            position: absolute;
+            width: 4px;
+            height: 4px;
+            background: var(--gold);
+            border-radius: 50%;
+            opacity: 0;
+            animation: float-particle 8s ease-in-out infinite;
+            box-shadow: 0 0 6px rgba(197, 160, 89, 0.5);
+        }
+
+        @keyframes float-particle {
+
+            0%,
+            100% {
+                opacity: 0;
+                transform: translateY(100px) translateX(0) scale(0);
+            }
+
+            10% {
+                opacity: 0.8;
+            }
+
+            50% {
+                opacity: 0.4;
+            }
+
+            90% {
+                opacity: 0.8;
+            }
+
+            95% {
+                opacity: 0;
+                transform: translateY(-100vh) translateX(50px) scale(1);
+            }
+        }
+
+        /* ============================================
+           VISUAL EFFECTS - 3D TILT CARDS
+        ============================================ */
+        .tilt-card {
+            transform-style: preserve-3d;
+            transition: transform 0.3s ease-out;
+        }
+
+        .tilt-card:hover {
+            transform: perspective(1000px) rotateX(var(--rotateX, 0deg)) rotateY(var(--rotateY, 0deg)) scale(1.02);
+        }
+
+        .tilt-card::before {
+            content: '';
+            position: absolute;
+            inset: 0;
+            background: linear-gradient(135deg,
+                    rgba(255, 255, 255, 0.1) 0%,
+                    transparent 50%,
+                    rgba(0, 0, 0, 0.1) 100%);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            pointer-events: none;
+            z-index: 10;
+        }
+
+        .tilt-card:hover::before {
+            opacity: 1;
+        }
+
+        /* Glow effect on hover */
+        .glow-hover {
+            transition: box-shadow 0.4s var(--ease-out-expo), transform 0.4s var(--ease-out-expo);
+        }
+
+        .glow-hover:hover {
+            box-shadow: 0 0 40px rgba(197, 160, 89, 0.3), 0 25px 50px -12px rgba(0, 0, 0, 0.4);
+        }
+
+        /* ============================================
+           VISUAL EFFECTS - PARALLAX IMAGES
+        ============================================ */
+        .parallax-container {
+            overflow: hidden;
+        }
+
+        .parallax-img {
+            transition: transform 0.1s linear;
+            will-change: transform;
+        }
+
+        /* ============================================
+           VISUAL EFFECTS - MAGNETIC BUTTONS
+        ============================================ */
+        .magnetic-btn {
+            transition: transform 0.3s var(--ease-out-expo);
+        }
+
+        /* ============================================
+           VISUAL EFFECTS - CURSOR GLOW (Dark sections)
+        ============================================ */
+        .cursor-glow {
+            position: fixed;
+            width: 400px;
+            height: 400px;
+            border-radius: 50%;
+            background: radial-gradient(circle, rgba(197, 160, 89, 0.08) 0%, transparent 70%);
+            pointer-events: none;
+            z-index: 0;
+            transform: translate(-50%, -50%);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .geography:hover .cursor-glow,
+        .landmarks:hover .cursor-glow,
+        footer:hover .cursor-glow {
+            opacity: 1;
+        }
+
+        /* ============================================
+           VISUAL EFFECTS - TEXT SHIMMER
+        ============================================ */
+        .shimmer-text {
+            background: linear-gradient(90deg,
+                    var(--gold) 0%,
+                    #fff 15%,
+                    var(--gold) 30%);
+            background-size: 200% 100%;
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: shimmer 3s ease-in-out infinite;
+        }
+
+        @keyframes shimmer {
+            0% {
+                background-position: 200% 0;
+            }
+
+            100% {
+                background-position: -200% 0;
+            }
+        }
+
+        /* Mobile: disable heavy effects */
+        @media (max-width: 768px) {
+            .particles-container {
+                display: none;
+            }
+
+            .cursor-glow {
+                display: none;
+            }
+
+            .tilt-card:hover {
+                transform: none;
+            }
+        }
     </style>
 </head>
 
@@ -2413,6 +2581,161 @@
                 behavior: 'smooth'
             });
         }
+
+        // ============================================
+        // VISUAL EFFECTS - FLOATING SAND PARTICLES
+        // ============================================
+        function createParticles(containerSelector, count = 30) {
+            const sections = document.querySelectorAll(containerSelector);
+            sections.forEach(section => {
+                // Skip if particles already exist
+                if (section.querySelector('.particles-container')) return;
+
+                const particlesDiv = document.createElement('div');
+                particlesDiv.className = 'particles-container';
+
+                for (let i = 0; i < count; i++) {
+                    const particle = document.createElement('div');
+                    particle.className = 'particle';
+                    particle.style.cssText = `
+                        left: ${Math.random() * 100}%;
+                        top: ${Math.random() * 100}%;
+                        width: ${2 + Math.random() * 4}px;
+                        height: ${2 + Math.random() * 4}px;
+                        animation-delay: ${Math.random() * 8}s;
+                        animation-duration: ${6 + Math.random() * 6}s;
+                    `;
+                    particlesDiv.appendChild(particle);
+                }
+
+                section.style.position = 'relative';
+                section.insertBefore(particlesDiv, section.firstChild);
+            });
+        }
+
+        // Create particles in hero and dark sections
+        createParticles('.hero', 40);
+        createParticles('.geography', 25);
+        createParticles('.landmarks', 20);
+
+        // ============================================
+        // VISUAL EFFECTS - 3D TILT CARDS
+        // ============================================
+        function initTiltCards() {
+            const cards = document.querySelectorAll('.geo-card, .landmark-card, .fun-fact');
+
+            cards.forEach(card => {
+                card.classList.add('tilt-card', 'glow-hover');
+
+                card.addEventListener('mousemove', (e) => {
+                    const rect = card.getBoundingClientRect();
+                    const x = e.clientX - rect.left;
+                    const y = e.clientY - rect.top;
+
+                    const centerX = rect.width / 2;
+                    const centerY = rect.height / 2;
+
+                    const rotateX = (y - centerY) / 20;
+                    const rotateY = (centerX - x) / 20;
+
+                    card.style.setProperty('--rotateX', `${rotateX}deg`);
+                    card.style.setProperty('--rotateY', `${rotateY}deg`);
+                });
+
+                card.addEventListener('mouseleave', () => {
+                    card.style.setProperty('--rotateX', '0deg');
+                    card.style.setProperty('--rotateY', '0deg');
+                });
+            });
+        }
+
+        initTiltCards();
+
+        // ============================================
+        // VISUAL EFFECTS - CURSOR GLOW
+        // ============================================
+        function initCursorGlow() {
+            const darkSections = document.querySelectorAll('.geography, .landmarks, footer');
+
+            darkSections.forEach(section => {
+                const glow = document.createElement('div');
+                glow.className = 'cursor-glow';
+                section.appendChild(glow);
+
+                section.addEventListener('mousemove', (e) => {
+                    glow.style.left = e.clientX + 'px';
+                    glow.style.top = e.clientY + 'px';
+                });
+            });
+        }
+
+        initCursorGlow();
+
+        // ============================================
+        // VISUAL EFFECTS - PARALLAX IMAGES
+        // ============================================
+        function initParallax() {
+            const images = document.querySelectorAll('.about-image img, .culture-image img, .economy-image img');
+
+            images.forEach(img => {
+                img.classList.add('parallax-img');
+                img.parentElement.classList.add('parallax-container');
+            });
+
+            // Parallax on scroll
+            let ticking = false;
+            window.addEventListener('scroll', () => {
+                if (!ticking) {
+                    requestAnimationFrame(() => {
+                        images.forEach(img => {
+                            const rect = img.getBoundingClientRect();
+                            const scrollPercent = (rect.top + rect.height / 2) / window.innerHeight;
+                            const translateY = (scrollPercent - 0.5) * 40;
+                            img.style.transform = `translateY(${translateY}px) scale(1.1)`;
+                        });
+                        ticking = false;
+                    });
+                    ticking = true;
+                }
+            });
+        }
+
+        initParallax();
+
+        // ============================================
+        // VISUAL EFFECTS - MAGNETIC BUTTONS
+        // ============================================
+        function initMagneticButtons() {
+            const buttons = document.querySelectorAll('.nav-menu-btn, .landmarks-nav-btn, .menu-close');
+
+            buttons.forEach(btn => {
+                btn.classList.add('magnetic-btn');
+
+                btn.addEventListener('mousemove', (e) => {
+                    const rect = btn.getBoundingClientRect();
+                    const x = e.clientX - rect.left - rect.width / 2;
+                    const y = e.clientY - rect.top - rect.height / 2;
+
+                    btn.style.transform = `translate(${x * 0.3}px, ${y * 0.3}px) scale(1.05)`;
+                });
+
+                btn.addEventListener('mouseleave', () => {
+                    btn.style.transform = '';
+                });
+            });
+        }
+
+        initMagneticButtons();
+
+        // ============================================
+        // VISUAL EFFECTS - SHIMMER TEXT ON HERO
+        // ============================================
+        const heroSubtitle = document.querySelector('.hero-subtitle');
+        if (heroSubtitle) {
+            heroSubtitle.classList.add('shimmer-text');
+        }
+
+        console.log('✨ Visual effects initialized');
     </script>
 </body>
 
